fix menu responsive

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -156,6 +156,9 @@
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+	.navbar-toggler-icon {
+    	color: black;
+	}
   .section-title {
     font-size: 36px;
   }
@@ -309,6 +312,9 @@
   }
 }
 @media (min-width: 320px) and (max-width: 480px) {
+	.navbar-toggler-icon {
+    	color: black;
+	}
   .section-title {
     font-size: 26px;
     line-height: 45px;
@@ -330,6 +336,7 @@
   }
   .navbar-header{
     width: 100%;
+    height: 100px !important;
   }
   .page-header .page-title {
     font-size: 20px;
