--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2600,6 +2600,10 @@ span.published-time i.fa {
   width: 100%;
   height: 350px;
 }
+.featured-wrapper_de img {
+  width: 100%;
+  height: 550px;
+}
 .blog-post-content h2.blog-post-title {
   font-size: 26px;
   font-weight: 600;
