add picture and email to person

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,3 +22,12 @@
 		width: 65%;
 	}
 }
+
+#team .info p {
+	text-transform: none !important;
+}
+
+#team .team-item figure img {
+    width: 101px !important;
+    height: 131px !important;
+}
