--- a/assets/css/colors/green.css
+++ b/assets/css/colors/green.css
@@ -428,7 +428,7 @@ h2.widget-title {
   background-color: #eee;
 }
 #main-menu .nav-link.active {
-  color: #9C3;
+  color: #5998cf;
 }
 #main-menu .nav-link:hover {
   color: #9C3;
